# cpp_Assignments

./: CMakeLists.txt
Ex1/: PhoneticFinder.cpp  PhoneticFinder.hpp  Test1.cpp
Ex2/: CMakeLists.txt  FamilyTree.cpp  FamilyTree.hpp  Test.cpp  Test_ariel.cpp
Ex3/: CMakeLists.txt  Test_shahar.cpp  solver.cpp  solver.hpp
Ex4/: Attacker.cpp  Attacker.hpp  Board.original.cpp  Board.original.hpp  CMakeLists.txt  DemoGame.cpp  DemoGame.hpp  FootCommander.cpp  FootCommander.hpp  FootSoldier.cpp  FootSoldier.hpp  Paramedic.cpp  Paramedic.hpp  ParamedicCommander.cpp  ParamedicCommander.hpp  Sniper.cpp  Sniper.hpp  SniperCommander.cpp  SniperCommander.hpp  Soldier.cpp  Soldier.hpp  Test_amichai.cpp  Test_oriane_yirat.cpp
Ex5/: Test_snir.cpp  accumulate.hpp  compress.hpp  filterfalse.hpp  range.hpp
